src/test/deca/context/invalid/langage_sans_objet/regles_communes/regle_0_2.deca
{
    A a;
}

// raison : opération partielle
// “Identificateur de type non déclaré”
